--- a/.github/workflows/detekt.yaml
+++ b/.github/workflows/detekt.yaml
@@ -14,3 +14,8 @@ jobs:
         run: chmod +x ./gradlew
       - name: Run detekt
         run: ./gradlew detekt
+      - name: Upload SARIF to Github using the upload-sarif action
+        uses: github/codeql-action/upload-sarif@v2
+        if: success() || failure()
+        with:
+          sarif_file: build/reports/detekt/detekt.sarif
